# chainweb-mining-client

./: .gitignore  CHANGELOG.md  README.md  Setup.hs  cabal.project  chainweb-mining-client.cabal  default.nix  flake.nix  test-miner.cabal
.github/workflows/: build-application.yml  nix.yml
main/: Main.hs
scripts/: stratum.expect
src/: JsonRpc.hs  Logger.hs  Target.hs  Utils.hs  Worker.hs  WorkerUtils.hs
src/Worker/: CPU.hs  ConstantDelay.hs  External.hs  OnDemand.hs  SimulatedMiner.hs  Simulation.hs  Stratum.hs
src/Worker/Fake/: ConstantDelay.hs  Miner.hs  OnDemand.hs
src/Worker/POW/: CPU.hs  Stratum.hs
src/Worker/POW/Stratum/: Protocol.hs  Server.hs
src/Worker/Stratum/: Protocol.hs  Server.hs
test/: Main.hs  TestUtils.hs
test/Test/: Target.hs  Utils.hs  WorkerUtils.hs
