cabal-version: 3.0
name: chainweb-mining-client
description:
    A mining client for Kadena Chainweb. It supports

    * multi threaded CPU mining,
    * external mining workers (e.g. a GPU),
    * simulated mining for testing.

    Competitive mining on the Kadena Chainweb Mainnet requires special mining
    hardware, which usually comes with its own mining client and mining pool
    support implementations. This generic mining client is intended mostly for
    testing.

version: 0.2
synopsis: Mining Client for Kadena Chainweb
homepage: https://github.com/kadena-io/chainweb-mining-client
bug-reports: https://github.com/kadena-io/chainweb-mining-client/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: lars@kadena.io
copyright: Copyright (c) 2019 - 2020, Kadena LLC
category: Data, Mathematics
build-type: Custom
tested-with:
      GHC==8.10.2
    , GHC==8.8.4
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/kadena-io/chainweb-mining-client.git

custom-setup
    setup-depends:
          base >=4.10 && <5
        , Cabal >=3.0
        , configuration-tools >=0.5

executable chainweb-mining-client
    hs-source-dirs: main, src
    main-is: Main.hs
    other-modules:
        PkgInfo
        Logger
        Worker
        Worker.CPU
        Worker.External
        Worker.Simulation
    autogen-modules:
        PkgInfo
    default-language: Haskell2010
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    build-depends:
          base >=4.10 && <4.15
        , aeson >=1.5
        , async >=2.2
        , bytes >=0.17
        , bytestring >=0.10
        , configuration-tools >=0.5
        , connection >=0.3
        , containers >=0.5
        , cryptonite >=0.27
        , exceptions >=0.10
        , hashable >=1.3
        , hostaddress >=0.1
        , http-client >=0.7
        , http-client-tls >=0.3
        , http-types >=0.12
        , lens >=4.19
        , loglevel >=0.1
        , memory >=0.15
        , mwc-random >=0.14
        , process >=1.6
        , retry >=0.8
        , stm >=2.5
        , streaming >=0.2
        , streaming-events >=1.0
        , text >=1.2
        , time >=1.9
        , unordered-containers >=0.2
        , wai-extra >=3.0
